# ViableOS

./: .gitignore  Dockerfile.api  LICENSE  README.md  docker-compose.yml  pyproject.toml
assets/: vsm-diagram.html
docs/blog/: 2026-03-02-from-topology-to-behavior.md
examples/: healthcare-saas.yaml
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Sidebar.tsx
frontend/src/hooks/: useApiData.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  OpsRoomPage.tsx  WizardPage.tsx
frontend/src/store/: useChatStore.ts  useConfigStore.ts  useOpsStore.ts
frontend/src/types/: index.ts
frontend/tests/e2e/: screenshots.spec.ts
src/viableos/: __init__.py  assessment_transformer.py  budget.py  checker.py  cli.py  coordination.py  generator.py  langgraph_generator.py  schema.py  soul_templates.py
src/viableos/api/: chat_routes.py  main.py  models.py  ops_routes.py  routes.py
src/viableos/app/: charts.py  components.py  dashboard.py  main.py  state.py  wizard.py
src/viableos/chat/: __init__.py  engine.py  session.py  system_prompt.py
src/viableos/ops/: __init__.py  adapter.py  langgraph_adapter.py  openclaw_adapter.py
src/viableos/templates/: accounting.yaml  consulting.yaml  content-creator.yaml  ecommerce.yaml  education.yaml  freelance-agency.yaml  law-firm.yaml  marketing-agency.yaml  (+4 more)
tests/: test_budget.py  test_checker.py  test_coordination.py  test_generator.py  test_schema.py
tests/fixtures/: complete.yaml  invalid.yaml  minimal.yaml
(+31 files in other folders)
