[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viableos"
version = "0.1.0"
description = "The operating system for viable AI agent organizations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philipp Enderle" }]
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
viableos = "viableos.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/viableos"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
